objects/LLC_BI__Document_Collection__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__External_Transaction_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is not required. Indicates transaction Id used by middleware.</description>
        <externalId>true</externalId>
        <label>External Transaction Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field indicates the status of the collection and is not required.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This field indicates the type of the collection and is not required.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E-Signature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Vendor_Collection_Id__c</fullName>
        <description>This field is not required. Identifier used by external vendor. For example, E-Signature document Id.</description>
        <externalId>true</externalId>
        <label>External Collection Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Document Collection</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DC-{0000000000}</displayFormat>
        <label>Document Collection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>